Optimise image
Add jvm flags